force-app/main/default/objects/PricebookEntry/fields/ATM_Fee_in_Other_Currencies__c.field-meta.xml
<CustomField>
    <fullName>ATM_Fee_in_Other_Currencies__c</fullName>
    <label>ATM Fee in Other Currencies</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>