force-app/main/default/objects/PricebookEntry/fields/Contract_Length__c.field-meta.xml
<CustomField>
    <fullName>Contract_Length__c</fullName>
    <label>Contract Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contract_Length</valueSetName>
    </valueSet>
</CustomField>